Resolved client spacing

--- a/src/styles/Auth.css
+++ b/src/styles/Auth.css
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   height: 100%;
+  margin-left: 4px;
   -webkit-app-region: no-drag;
 }
 
